--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
 requests==2.31.0
+schedule==1.2.1
 selenium==4.18.1
 six==1.16.0
 sniffio==1.3.1
