--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
 attrs==23.2.0
+blinker==1.7.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
+click==8.1.7
 exceptiongroup==1.2.0
+Flask==3.0.2
+gevent==24.2.1
+greenlet==3.0.3
 h11==0.14.0
 idna==3.6
+importlib_metadata==7.0.2
+itsdangerous==2.1.2
+Jinja2==3.1.3
+MarkupSafe==2.1.5
 numpy==1.24.4
 outcome==1.3.0.post0
 packaging==23.2
@@ -26,4 +35,8 @@ typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==2.2.1
 webdriver-manager==4.0.1
+Werkzeug==3.0.1
 wsproto==1.2.0
+zipp==3.17.0
+zope.event==5.0
+zope.interface==6.2
