--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ exceptiongroup==1.2.0
 Flask==3.0.2
 gevent==24.2.1
 greenlet==3.0.3
+gunicorn==21.2.0
 h11==0.14.0
 idna==3.6
 importlib_metadata==7.0.2
